--- a/index.html
+++ b/index.html
@@ -177,6 +177,13 @@
                 <span>永远爱你的明</span>
                 <div class="up"></div>
             </div>
+            <div class="swiper-slide slide12">
+                <img src="img/a65.gif" alt=""/>
+                <span>祝你平安夜快乐</span>
+                <span>祝你天天开心</span>
+                <div class="up"></div>
+
+            </div>
         </div>
     </div>
 </section>
