--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@
                 <div class="up"></div>
 
             </div>
+            <div class="swiper-slide slide13">
+                <img src="img/a66.png" alt=""/>
+                <span>祝你圣诞节快乐</span>
+                <span>永远要稳稳的幸福</span>
+                <div class="up"></div>
+
+            </div>
         </div>
     </div>
 </section>
