--- a/index.html
+++ b/index.html
@@ -191,6 +191,18 @@
                 <div class="up"></div>
 
             </div>
+            <div class="swiper-slide slide14">
+                <img src="img/a67.png" alt=""/>
+                <img src="img/a68.png" alt=""/>
+                <img src="img/a69.png" alt=""/>
+                <img src="img/a70.png" alt=""/>
+                <img src="img/lihua1.gif" alt=""/>
+                <img src="img/2.jpg" alt=""/>
+                 <span>元旦快乐</span>
+                 <span>祝你在2017事事如意</span>
+                <div class="up"></div>
+
+            </div>
         </div>
     </div>
 </section>
