--- a/index.html
+++ b/index.html
@@ -203,6 +203,32 @@
                 <div class="up"></div>
 
             </div>
+            <div class="swiper-slide slide15">
+                <img src="img/a72.png" alt=""/>
+                <img src="img/a73.png" alt=""/>
+                <img src="img/a74.png" alt=""/>
+                <img src="img/a75.png" alt=""/>
+                <img src="img/a76.png" alt=""/>
+                <img src="img/a77.png" alt=""/>
+                <img src="img/a78.png" alt=""/>
+                <img src="img/a79.png" alt=""/>
+                <span>韩射明祝你在新年里：</span>
+                <span>一家和和睦睦,</span>
+                <span>一年开开心心;</span>
+                <span>一生快快乐乐,</span>
+                <span>一世平平安安;</span>
+                <span>天天精神百倍,</span>
+                <span>月月喜气洋洋;</span>
+                <span>年年财源广进,</span>
+                <span>岁岁平安祥和;</span>
+                <span>春节快乐!</span>
+                <img src="img/a80.png" alt=""/>
+                <img src="img/a81.png" alt=""/>
+                <img src="img/a82.png" alt=""/>
+                <img src="img/a83.png" alt=""/>
+                <img src="img/xing.gif" alt=""/>
+                <div class="up"></div>
+            </div>
         </div>
     </div>
 </section>
