--- a/index.html
+++ b/index.html
@@ -229,6 +229,19 @@
                 <img src="img/xing.gif" alt=""/>
                 <div class="up"></div>
             </div>
+            <div class="swiper-slide slide16">
+                <img src="img/a85.png" alt=""/>
+                <img src="img/a86.png" alt=""/>
+                <img src="img/a87.png" alt=""/>
+                <img src="img/a88.png" alt=""/>
+                <img src="img/a89.png" alt=""/>
+                <span>元宵节快乐</span>
+                <span>幸福满满</span>
+                <img src="img/a90.png" alt=""/>
+                <img src="img/a91.png" alt=""/>
+                <img src="img/a92.png" alt=""/>
+                <div class="up"></div>
+            </div>
         </div>
     </div>
 </section>
