--- a/index.html
+++ b/index.html
@@ -242,6 +242,25 @@
                 <img src="img/a92.png" alt=""/>
                 <div class="up"></div>
             </div>
+            <div class="swiper-slide slide17">
+                <img src="img/3.jpg" alt=""/>
+                <span>摇曳一季繁花</span>
+                <span>寄托一份祝福</span>
+                <span>祝你生日快乐</span>
+                <div class="up"></div>
+            </div>
+            <div class="swiper-slide slide18">
+                <img src="img/a93.png" alt=""/>
+                <img src="img/a94.png" alt=""/>
+                <span>美丽的敏敏</span>
+                <span>蛋糕带着甜甜的清香</span>
+                <span>烛光在心底闪耀</span>
+                <span>当你默默许愿的时候</span>
+                <span>我也偷偷为你许下一个祝福</span>
+                <span>祝你幸福快乐每一天</span>
+                <img src="img/a95.png" alt=""/>
+                <div class="up"></div>
+            </div>
         </div>
     </div>
 </section>
